--- a/styles/main.css
+++ b/styles/main.css
@@ -23,11 +23,13 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+
 body {
 	line-height: 1;
 }
@@ -42,85 +44,105 @@ q:before, q:after {
 	content: '';
 	content: none;
 }
+
 table {
 	border-collapse: collapse;
-	border-spacing: 0;
+	border-spacing : 0;
 }
-.top{
-	list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #666;
+
+.top {
+	list-style-type : none;
+	margin          : 0;
+	padding         : 0;
+	overflow        : hidden;
+	background-color: #666;
 }
+
 li.top {
 	float: left;
-  }
-  
-  li.top a {
-	display: block;
-	color: white;
-	text-align: center;
-	padding: 14px 16px;
-	text-decoration: none;
-  }
-  
-  /* Change the link color to #111 (black) on hover */
-  li.top a:hover {
-	background-color: #111;
-  }
-
-footer.cont{
-	display: block;
-	color: #666;
-	text-align: center;
-	padding: 14px 16px;
-	background-color: #666;
-	text-decoration: none;
-	width: 99vw;
-	margin-top: 5vh;
-	
 }
-footer p{
+
+li.top a {
+	display        : block;
+	color          : white;
+	text-align     : center;
+	padding        : 14px 16px;
+	text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+li.top a:hover {
+	background-color: #111;
+}
+
+footer.cont {
+	display         : block;
+	color           : #666;
+	text-align      : center;
+	padding         : 14px 16px;
+	background-color: #666;
+	text-decoration : none;
+	width           : 99vw;
+	margin-top      : 5vh;
+
+}
+
+footer p {
 	float: left;
 }
 
-header.cont{
+header.cont {
 	background-color: teal;
-	text-decoration: wavy;
-	padding: 2vh 2vw 2vh 2vw;
-	margin: 0vh 0vw 0vh 0vw;
-	width: 100vw;
+	text-decoration : wavy;
+	padding         : 2vh 2vw 2vh 2vw;
+	margin          : 0vh 0vw 0vh 0vw;
+	width           : 100vw;
 }
 
-section.cont{
-	padding: 5vh 1vw 5vh 1vw;
-	margin: 0vh 0vw 0vh 0vw;
-	width: 100vw;
+section.cont {
+	padding  : 5vh 1vw 5vh 1vw;
+	margin   : 0vh 0vw 0vh 0vw;
+	width    : 100vw;
 	word-wrap: break-word;
 	max-width: 100vw;
 }
 
 * {
 	box-sizing: border-box;
+}
    }  
-   [class*="col-"] {
-	width: 100%;
-}  
+}
+   }  
+}
+   }  
+}
+   }  
+}
+   }  
+}
 
-.title{
+[class*="col-"] {
+	width: 100%;
+}
+
+.title {
 	font-size: large;
-	color: gold;
-	
+	color    : gold;
+
+}
+
+img {
+	object-fit: cover;
 }
 
 @media only screen and (max-width: 768px) {
+
 	/* For mobile phones and tablets: */
 	[class*="col-"] {
 		width: 100%;
 	}
+
 	#fadeshow {
 		display: none;
 	}
-} 
-
+}
