--- a/styles/styles.less
+++ b/styles/styles.less
@@ -3,59 +3,161 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+    margin        : 0;
+    padding       : 0;
+    border        : 0;
+    font-size     : 100%;
+    font          : inherit;
+    vertical-align: baseline;
 }
 
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
 }
 
 body {
-	line-height: 1;
+    line-height: 1;
 }
-ol, ul {
-	list-style: none;
+
+ol,
+ul {
+    list-style: none;
 }
-blockquote, q {
-	quotes: none;
+
+blockquote,
+q {
+    quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+    content: '';
+    content: none;
 }
 
 table {
-	border-collapse: collapse;
-	border-spacing : 0;
+    border-collapse: collapse;
+    border-spacing : 0;
 }
 
 @carouselheight        : 90vh;
 @section-padding-width : 1vw;
 @section-padding-height: 5vh;
 
+.weightedtext {
+    font-size: larger; 
+    font-weight: 600;
+}
+
 * {
-    box-sizing: border-box;
+    box-sizing     : border-box;
+    scrollbar-color: #666 #d6dee1;
+    scrollbar-width: thin;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #d6dee1;
+    border-radius   : 10px;
+    border          : 2px solid transparent;
+    background-clip : content-box;
 }
 
 .top {
@@ -64,6 +166,14 @@ table {
     padding         : 0;
     overflow        : hidden;
     background-color: #666;
+}
+
+#description {
+    .weightedtext();
+}
+
+.accordion-button {
+    .weightedtext();
 }
 
 li.top {
@@ -124,7 +234,7 @@ section.cont {
 }
 
 #carousel {
-    width : 100vw - @section-padding-width;
+    width: 100vw - @section-padding-width;
 
     img {
         object-fit: cover;
@@ -133,6 +243,10 @@ section.cont {
     .carousel-inner {
         height: @carouselheight;
     }
+}
+
+.nav-link {
+    padding: 0.75rem;
 }
 
 @media only screen and (max-width: 768px) {
